# nanobind_uv_workspace_example

./: .gitignore  LICENSE  README.md  build.bat  build.sh  clean.bat  clean.sh  pyproject.toml  serve.bat  serve.sh  sync.bat  sync.sh  tasks.bat  tasks.py  tasks.sh  test.bat  test.sh
example/: example.py  pyproject.toml
src/cat/: CMakeLists.txt  cat.cpp  cat.h
src/dog/: CMakeLists.txt  dog.cpp  dog.h
src/pet/: CMakeLists.txt  pet.cpp  pet.h
src/pycat/: CMakeLists.txt  pycat.cpp  pyproject.toml
src/pycat/src/pycat/: __init__.py
src/pydog/: CMakeLists.txt  __init__.py  pydog.cpp  pyproject.toml
src/pydog/src/pydog/: __init__.py
src/pypet/: CMakeLists.txt  pypet.cpp  pyproject.toml
src/pypet/src/pypet/: __init__.py
src/pypets/: __init__.py
