[project]
name = "nanobind_uv_workspace_example"
version = "1"
requires-python = ">=3.12"
dependencies = [
  "pycat",
  "pydog",
  "pypet",
  "pypets"
]

[tool.uv.sources]
pycat  = [{ index = "localhost" }]
pydog  = [{ index = "localhost" }]
pypet  = [{ index = "localhost" }]
pypets = [{ index = "localhost" }]

[[tool.uv.index]]
name = "localhost"
url = "http://localhost/simple"
explicit = true
